Prevent log timestamps from text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ main nav ul li {
     margin: 0;
     padding: 0;
     display: block;
+    white-space: nowrap;
 }
 
 main div#content {
